[workspace]

members = [
  "bcm2837", "cortex-a",
  "rpi3b"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tock Project Developers <devel@tockos.org>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1

