# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "raspberry_pi"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bcm2837 = { path = "../bcm2837" }
kernel = { git = "https://github.com/tock/tock", branch = "master" }
